--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 <img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
-<p>Welcome to your first GitHub Pages website!</p>
+<p>Willkommen auf meiner simplen GitHub Seite, <br> 
+   Freundliche Grüße, Lucas K.
+</p>
+  <p> Welcome to my simple Github site,
+    yours, Lucas K. </p>
+  
 
 </body>
 </html>
